--- a/config/install/field.field.node.task.body.yml
+++ b/config/install/field.field.node.task.body.yml
@@ -1,3 +1,4 @@
+uuid: 7b72da14-bf72-41e9-9aad-5fd64679a863
 langcode: en
 status: true
 dependencies:
@@ -7,12 +8,12 @@ dependencies:
   module:
     - text
 _core:
-  default_config_hash: 41HPvkXV7bPuz63xfh0oKJ7nSGgYQmLgUP_GD3iCyBg
+  default_config_hash: busDz3abIUfmNcMYeKukCqxKE5Y2H2ih_UMkJFNfqdA
 id: node.task.body
 field_name: body
 entity_type: node
 bundle: task
-label: Body
+label: Description
 description: ''
 required: false
 translatable: true
