Fixes access and permission add assignee form

--- a/social_task_assignment.routing.yml
+++ b/social_task_assignment.routing.yml
@@ -18,4 +18,4 @@ social_task_assignment.add_assignees:
     _form: '\Drupal\social_task_assignment\Form\SocialTaskAssignmentAddAssigneeForm'
     _title: 'Add assignee'
   requirements:
-    _enrollee_permission: 'manage everything assignments'
+    _assignee_permission: 'manage everything assignments'
