--- a/social_task_assignment.services.yml
+++ b/social_task_assignment.services.yml
@@ -12,3 +12,8 @@ services:
   social_task_assignment.status_helper:
     class: Drupal\social_task_assignment\SocialTaskAssignmentStatusHelper
     arguments: ['@current_route_match', '@entity_type.manager', '@current_user', '@config.factory']
+
+  social_task_assignment.add_enrollee.permission:
+    class: 'Drupal\social_task_assignment\Access\AddAssigneeAccessCheck'
+    tags:
+      - { name: 'access_check', applies_to: '_assignee_permission', priority: 249 }
