--- a/config/install/core.entity_form_display.task_assignment.task_assignment.feedback.yml
+++ b/config/install/core.entity_form_display.task_assignment.task_assignment.feedback.yml
@@ -6,16 +6,18 @@ dependencies:
     - field.field.task_assignment.task_assignment.field_account
     - field.field.task_assignment.task_assignment.field_due_date
     - field.field.task_assignment.task_assignment.field_feedback
+    - field.field.task_assignment.task_assignment.field_information
     - field.field.task_assignment.task_assignment.field_status
     - field.field.task_assignment.task_assignment.field_submission_date
     - field.field.task_assignment.task_assignment.field_task
     - field.field.task_assignment.task_assignment.field_upload
     - field.field.task_assignment.task_assignment.field_webform_submissions
   module:
-    - datetime
     - file
     - social_task_assignment
     - text
+_core:
+  default_config_hash: Sx5CyzfdAks-aXjnsv_h7XrbDZn57aF-ln6UXa2mjb8
 id: task_assignment.task_assignment.feedback
 targetEntityType: task_assignment
 bundle: task_assignment
@@ -35,12 +37,6 @@ content:
     region: content
     settings: {  }
     third_party_settings: {  }
-  field_submission_date:
-    type: datetime_default
-    weight: 4
-    region: content
-    settings: {  }
-    third_party_settings: {  }
   field_upload:
     type: file_generic
     weight: 1
@@ -51,9 +47,10 @@ content:
 hidden:
   field_account: true
   field_due_date: true
+  field_information: true
+  field_submission_date: true
   field_task: true
   field_webform_submissions: true
   langcode: true
   name: true
   user_id: true
-
