--- a/config/install/core.entity_view_display.node.task.activity.yml
+++ b/config/install/core.entity_view_display.node.task.activity.yml
@@ -1,8 +1,9 @@
-uuid: ca2e908f-287d-4779-be5b-acd6f30b7796
+uuid: 40263ee3-00ff-4ca7-b4cd-9c19363ad920
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.activity
     - field.field.node.task.body
     - field.field.node.task.field_content_visibility
     - field.field.node.task.field_date
@@ -15,30 +16,76 @@ dependencies:
     - field.field.node.task.field_webform
     - node.type.task
   module:
+    - datetime
     - file
-    - text
+    - image
+    - options
     - user
 _core:
   default_config_hash: x7K9NJACA7TgpF1oy0MVWyWyiQKWMq0kYXHPl-iaL18
-id: node.task.default
+id: node.task.activity
 targetEntityType: node
 bundle: task
-mode: default
+mode: activity
 content:
-  body:
-    type: text_default
-    weight: 4
-    region: content
-    label: hidden
-    settings: {  }
+  field_date:
+    weight: 7
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
     third_party_settings: {  }
+    type: datetime_default
+    region: content
+  field_date_cut_off:
+    weight: 8
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
+  field_date_due:
+    weight: 6
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
   field_files:
-    weight: 5
+    weight: 10
     label: above
     settings:
       use_description_as_link_text: true
     third_party_settings: {  }
     type: file_default
+    region: content
+  field_task_flow:
+    weight: 4
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
+  field_task_image:
+    weight: 9
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
+  field_task_managers:
+    weight: 5
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   groups_type_closed_group:
     label: above
@@ -105,13 +152,8 @@ content:
     third_party_settings: {  }
     type: entity_reference_label
 hidden:
+  body: true
   field_content_visibility: true
-  field_date: true
-  field_date_cut_off: true
-  field_date_due: true
-  field_task_flow: true
-  field_task_image: true
-  field_task_managers: true
   field_webform: true
   flag_follow_content: true
   groups: true
