--- a/config/install/core.entity_view_display.node.task.small_teaser.yml
+++ b/config/install/core.entity_view_display.node.task.small_teaser.yml
@@ -1,8 +1,9 @@
-uuid: ca2e908f-287d-4779-be5b-acd6f30b7796
+uuid: 9d077be0-f742-47a9-960a-97b2565ea573
 langcode: en
 status: true
 dependencies:
   config:
+    - core.entity_view_mode.node.small_teaser
     - field.field.node.task.body
     - field.field.node.task.field_content_visibility
     - field.field.node.task.field_date
@@ -15,15 +16,18 @@ dependencies:
     - field.field.node.task.field_webform
     - node.type.task
   module:
+    - datetime
     - file
+    - image
+    - options
     - text
     - user
 _core:
   default_config_hash: x7K9NJACA7TgpF1oy0MVWyWyiQKWMq0kYXHPl-iaL18
-id: node.task.default
+id: node.task.small_teaser
 targetEntityType: node
 bundle: task
-mode: default
+mode: small_teaser
 content:
   body:
     type: text_default
@@ -32,13 +36,64 @@ content:
     label: hidden
     settings: {  }
     third_party_settings: {  }
+  field_date:
+    weight: 8
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
+  field_date_cut_off:
+    weight: 9
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
+  field_date_due:
+    weight: 7
+    label: above
+    settings:
+      format_type: medium
+      timezone_override: ''
+    third_party_settings: {  }
+    type: datetime_default
+    region: content
   field_files:
-    weight: 5
+    weight: 11
     label: above
     settings:
       use_description_as_link_text: true
     third_party_settings: {  }
     type: file_default
+    region: content
+  field_task_flow:
+    weight: 5
+    label: above
+    settings: {  }
+    third_party_settings: {  }
+    type: list_default
+    region: content
+  field_task_image:
+    weight: 10
+    label: above
+    settings:
+      image_style: ''
+      image_link: ''
+    third_party_settings: {  }
+    type: image
+    region: content
+  field_task_managers:
+    weight: 6
+    label: above
+    settings:
+      link: true
+    third_party_settings: {  }
+    type: entity_reference_label
     region: content
   groups_type_closed_group:
     label: above
@@ -106,12 +161,6 @@ content:
     type: entity_reference_label
 hidden:
   field_content_visibility: true
-  field_date: true
-  field_date_cut_off: true
-  field_date_due: true
-  field_task_flow: true
-  field_task_image: true
-  field_task_managers: true
   field_webform: true
   flag_follow_content: true
   groups: true
