--- a/modules/social_task_assignment_auto_assign/config/install/views.view.manage_all_task_assignments.yml
+++ b/modules/social_task_assignment_auto_assign/config/install/views.view.manage_all_task_assignments.yml
@@ -10,6 +10,7 @@ dependencies:
     - options
     - profile
     - social_profile
+    - social_task_assignment
     - social_task_assignment_vbo
     - text
     - user
